fix some layout issues spotted by colin
svn path=/branches/danny-web/; revision=396

--- a/www/www.reactos.org/roscms/css/user.css
+++ b/www/www.reactos.org/roscms/css/user.css
@@ -25,7 +25,7 @@ ADDRESS P { margin: 0;}
 
 /* left menu */
 #leftNav { padding: 0px 10px 10px 10px; }
-#leftNav UL { margin: 0px 0px 1.5em 0px; padding: 0px; list-style-type: none; background-color: #EEEEEE; border-top: #3F3849 0px solid; border-right: #3F3849 1px solid; border-left: #3F3849 1px solid; }
+#leftNav UL { margin: 0px 0px 1em 0px; padding: 0px; list-style-type: none; background-color: #EEEEEE; border-top: #3F3849 0px solid; border-right: #3F3849 1px solid; border-left: #3F3849 1px solid; }
 #leftNav UL LI { font-size: 12px; font-weight: bold; border-bottom: 1px solid #3f3849; }
 #leftNav UL LI A { display: block; padding: 2px 4px; color: #3F3849; text-decoration: none; }
 #leftNav UL LI A:hover { color: black; background-color: #FFCC33; }
